# libimobiledevice-glue

./: .gitignore  configure.ac
include/: Makefile.am
include/libimobiledevice-glue/: collection.h  debug.h  endianness.h  json.h  locking.h  sha1.h  sha2.h  socket.h  termcolors.h  thread.h
src/: Makefile.am  collection.c  debug.c  json.c  libimobiledevice-glue-1.1.pc  locking.c  sha1.c
